--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="font-faces.css">
         <script src="script.js" defer></script>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -23,7 +23,14 @@
             </div>
 
             <div id="home-page-first-section">
-                <div id="first-section-text"></div>
+                <div id="first-section-text">
+                    <pre>
+<span style="font-weight: 400;">Looking</span> <span style="font-style: italic; font-weight: 200;">for</span> <span style="font-weight: 400;">my next</span>
+<span style="font-weight: 700;">opportunity</span>
+<span style="font-weight: 400;">to make</span> <span style="font-style: italic; font-weight: 200;">a</span> <span style="font-weight: 400;">change.</span>
+<span style="font-weight: 400;font-style: italic;">The</span> <span style="font-weight: 700;"><mark>digital</mark></span> <span style="font-weight: 400;">way.</span>
+                    </pre>
+                </div>
                 <div id="home-page-first-section-image"></div>
             </div>
 
