Designed the second section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,43 @@
                     </pre>
                 </div>
             </div>
+        </div>
 
+        <div id="homepage-second-section">
+            <div style="height: 50px;"></div>
+            <div style="height: 100px; width: 500px; background-color: var(--main-color);position: absolute;z-index: -1;"></div>
+            <pre><span style="font-weight: 300;font-size: 3.6rem;">    This is</span>   <span style="font-weight: 700;font-size: 3.6rem;">me.</span></pre>
+            
+            <div style="flex: 1;display: flex; flex-direction: column; align-items: center;">
+                <div style="height: 50px;"></div>
+                <span style="width: 80%; max-width: 700px;text-align: justify;">
+                    I am a self-taught software developer with a deep passion for programming and technology. 
+                    From a young age, I was captivated by the endless possibilities that software development offers, 
+                    and I have since dedicated myself to learning, experimenting, and building across a wide range of 
+                    platforms and technologies.
+
+                    Over the years, I have successfully completed numerous projects that span diverse domains — from 
+                    developing robotics systems using Arduino to creating artificial intelligence models, as well as 
+                    building applications for Android, iOS, Windows, and macOS. I specialize in cross-platform app development 
+                    using Flutter, which allows me to deliver high-quality, performant, and visually appealing applications. 
+                    For data-driven problem-solving, scripting, and backend development, I rely heavily on Python due to its 
+                    versatility and powerful ecosystem.
+
+                    My hands-on experience and continuous self-driven learning have equipped me with a strong foundation in 
+                    both software engineering and artificial intelligence. I am confident in my ability to tackle complex 
+                    technical challenges, adapt to new technologies, and contribute meaningfully to any development team or project.
+
+                </span>
+                <div style="height: 50px;"></div>
+                <pre style="font-size: 2rem;font-weight: 200; line-height:2;">
+<span>Python,</span> <span style="background-color: black;color: white;"> App Development, </span>
+<span style="background-color: rgb(224, 224, 224);"> Flutter, </span> <span>Website Development,</span>
+<span style="background-color: black;color: white;"> Artificial Intelligence, </span>
+<span style="background-color: rgb(224, 224, 224);"> Dart, </span> <span style="background-color: black;color: white;"> Robotics, </span>
+<span>Creative Initiatives.</span>
+                </pre>
+            </div>
+            
         </div>
     </body>
 </html>
