--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
 
         <div id="homepage-second-section">
-            <div style="height: 50px;"></div>
-            <div style="height: 100px; width: 500px; background-color: var(--main-color);position: absolute;z-index: -1;"></div>
-            <pre><span style="font-weight: 300;font-size: 3.6rem;">    This is</span>   <span style="font-weight: 700;font-size: 3.6rem;">me.</span></pre>
+
+            <div id="second-section-yellow-box"></div>
+            <pre style="margin-top: 50px;"><span style="font-weight: 300;font-size: 3.6rem;"> This is</span>   <span style="font-weight: 700;font-size: 3.6rem;">me.</span></pre>
             
             <div style="flex: 1;display: flex; flex-direction: column; align-items: center;">
                 <div style="height: 50px;"></div>
@@ -73,7 +73,7 @@
 
                 </span>
                 <div style="height: 50px;"></div>
-                <pre style="font-size: 2rem;font-weight: 200; line-height:2;">
+                <pre id="second-section-pre">
 <span>Python,</span> <span style="background-color: black;color: white;"> App Development, </span>
 <span style="background-color: rgb(224, 224, 224);"> Flutter, </span> <span>Website Development,</span>
 <span style="background-color: black;color: white;"> Artificial Intelligence, </span>
