--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         </div>
 
         <div id="homepage-second-section">
-
             <div id="second-section-yellow-box"></div>
             <pre style="margin-top: 50px;"><span style="font-weight: 300;font-size: 3.6rem;"> This is</span>   <span style="font-weight: 700;font-size: 3.6rem;">me.</span></pre>
             
@@ -82,6 +81,28 @@
                 </pre>
             </div>
             
+        </div>
+
+        <div id="homepage-third-section">
+            <div id="third-section-image"></div>
+            <div style="width: 100%; height: 100%; display: flex; justify-content: center;align-items: center;">
+                <div id="third-section-glass-div">
+                    <pre>I <span style="font-weight: 700;">develop</span> software solutions
+for clients.</pre>
+                    <br>
+                    I have a proven history of delivering high-quality products that are carefully 
+                    tailored to meet the specific needs of both corporate and individual clients. 
+                    I'm deeply focused on understanding the unique goals and challenges of each project 
+                    and turning them into practical, effective solutions. Meeting deadlines and following 
+                    through on every detail is a core part of how I work, and I approach every project with 
+                    a strong sense of ownership and responsibility. My commitment to clear communication, 
+                    reliability, and high standards ensures that every collaboration runs smoothly and leaves 
+                    clients genuinely satisfied with both the process and the outcome.
+                    <br>
+                    <br>
+                    <input type="button" value="Get in Touch">
+                </div>
+            </div>
         </div>
     </body>
 </html>
