Made the third section responsive

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
                 </span>
                 <div style="height: 50px;"></div>
-                <pre id="second-section-pre">
-<span>Python,</span> <span style="background-color: black;color: white;"> App Development, </span>
-<span style="background-color: rgb(224, 224, 224);"> Flutter, </span> <span>Website Development,</span>
-<span style="background-color: black;color: white;"> Artificial Intelligence, </span>
-<span style="background-color: rgb(224, 224, 224);"> Dart, </span> <span style="background-color: black;color: white;"> Robotics, </span>
+                <div id="second-section-text-div">
+<span>Python,</span> <span style="background-color: black;color: white;"> App Development, </span><br>
+<span style="background-color: rgb(224, 224, 224);"> Flutter, </span> <span>Website Development,</span><br>
+<span style="background-color: black;color: white;"> Artificial Intelligence, </span><br>
+<span style="background-color: rgb(224, 224, 224);"> Dart, </span> <span style="background-color: black;color: white;"> Robotics, </span><br>
 <span>Creative Initiatives.</span>
-                </pre>
+                </div>
             </div>
             
         </div>
@@ -87,8 +87,7 @@
             <div id="third-section-image"></div>
             <div style="width: 100%; height: 100%; display: flex; justify-content: center;align-items: center;">
                 <div id="third-section-glass-div">
-                    <pre>I <span style="font-weight: 700;">develop</span> software solutions
-for clients.</pre>
+                    <div>I <span style="font-weight: 700;">develop</span> software solutions for clients.</div>
                     <br>
                     I have a proven history of delivering high-quality products that are carefully 
                     tailored to meet the specific needs of both corporate and individual clients. 
