--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
             <div id="home-page-first-section">
                 <div id="first-section-text">
-                    <pre>
-<span style="font-weight: 400;">Looking</span> <span style="font-style: italic; font-weight: 200;">for</span> <span style="font-weight: 400;">my next</span>
-<span style="font-weight: 700;">opportunity</span>
-<span style="font-weight: 400;">to make</span> <span style="font-style: italic; font-weight: 200;">a</span> <span style="font-weight: 400;">change.</span>
-<span style="font-weight: 400;font-style: italic;">The</span> <span style="font-weight: 700;"><mark>digital</mark></span> <span style="font-weight: 400;">way.</span>
-                    </pre>
+                    <div>
+                        <span style="font-weight: 400;">Looking</span> <span style="font-style: italic; font-weight: 200;">for</span> <span style="font-weight: 400;">my next</span><br>
+                        <span style="font-weight: 700;">opportunity</span><br>
+                        <span style="font-weight: 400;">to make</span> <span style="font-style: italic; font-weight: 200;">a</span> <span style="font-weight: 400;">change.</span><br>
+                        <span style="font-weight: 400;font-style: italic;">The</span> <span style="font-weight: 700;"><mark>digital</mark></span> <span style="font-weight: 400;">way.</span><br>
+                    </div>
                 </div>
                 <div id="home-page-first-section-image"></div>
             </div>
