Created the remaining html files

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 </div>
                 
                 <div id="navbar-right-section">
-                    <span>About Me</span>
-                    <span>My Projects</span>
-                    <span>Blog</span>
-                    <span>Contact</span>
+                    <a href="index.html"><span>About Me</span></a>
+                    <a href="my-projects.html"><span>My Projects</span></a>
+                    <a href="blog.html"><span>Blog</span></a>
+                    <a href="contact.html"><span>Contact</span></a>
                 </div>
             </div>
 
