--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="navbar">
                 <div id="navbar-left-section">
                     <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                    <span style="font-weight: 300;">a <mark>Software Engineer.</mark></span>
+                    <a href="index.html"><a href="index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a></a>
                 </div>
                 
                 <div id="navbar-right-section">
