--- a/my-projects.html
+++ b/my-projects.html
@@ -10,7 +10,7 @@
         <div class="navbar">
             <div id="navbar-left-section">
                 <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                <span style="font-weight: 300;">a <mark>Software Engineer.</mark></span>
+                <a href="index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
             </div>
             
             <div id="navbar-right-section">
