Made the chevrons functional

--- a/my-projects.html
+++ b/my-projects.html
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <div id="left-chevron"></div>
-        <div id="right-chevron"></div>
+        <div id="left-chevron" onclick="chevronClicked('left')"></div>
+        <div id="right-chevron" onclick="chevronClicked('right')"></div>
     </body>
 </html>
