Made the platform divs functional

--- a/my-projects.html
+++ b/my-projects.html
@@ -23,15 +23,15 @@
             </div>
 
             <div id="my-projects-page-main-div">
-                <div class="platform-div">
+                <div class="platform-div" onclick="window.location.href = 'mobile-apps.html';">
                     <img src="./assets/images/iphone-bezel.png" width="100%">
                     <span>Mobile Apps</span>
                 </div>
-                <div class="platform-div">
+                <div class="platform-div" onclick="window.location.href = 'desktop-apps.html';">
                     <img src="./assets/images/mac-bezel.png" width="100%">
                     <span>Desktop Apps</span>
                 </div>
-                <div class="platform-div">
+                <div class="platform-div" onclick="window.location.href = 'web-apps.html';">
                     <img src="./assets/images/web.png" width="100%">
                     <span>Web Apps</span>
                 </div>
