Created the pages folder and updated the links

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,14 +10,14 @@
         <div class="navbar">
             <div id="navbar-left-section">
                 <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                <a href="index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
+                <a href="../index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
             </div>
             
             <div id="navbar-right-section">
-                <a href="index.html"><span>About Me</span></a>
-                <a href="my-projects.html"><span>My Projects</span></a>
-                <a href="blog.html"><span>Blog</span></a>
-                <a href="contact.html"><span>Contact</span></a>
+                <a href="../index.html"><span>About Me</span></a>
+                <a href="./my-projects.html"><span>My Projects</span></a>
+                <a href="./blog.html"><span>Blog</span></a>
+                <a href="./contact.html"><span>Contact</span></a>
             </div>
         </div>
 
