Updated more links :/

--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="font-faces.css">
-        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../font-faces.css">
+        <script src="../script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
@@ -24,15 +24,15 @@
 
             <div id="my-projects-page-main-div">
                 <div class="platform-div" onclick="window.location.href = 'mobile-apps.html';">
-                    <img src="./assets/images/iphone-bezel.png" width="100%">
+                    <img src="../assets/images/iphone-bezel.png" width="100%">
                     <span>Mobile Apps</span>
                 </div>
                 <div class="platform-div" onclick="window.location.href = 'desktop-apps.html';">
-                    <img src="./assets/images/mac-bezel.png" width="100%">
+                    <img src="../assets/images/mac-bezel.png" width="100%">
                     <span>Desktop Apps</span>
                 </div>
                 <div class="platform-div" onclick="window.location.href = 'web-apps.html';">
-                    <img src="./assets/images/web.png" width="100%">
+                    <img src="../assets/images/web.png" width="100%">
                     <span>Web Apps</span>
                 </div>
             </div>
