--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="font-faces.css">
-        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../font-faces.css">
+        <script src="../script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
