--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="../font-faces.css">
         <script src="../script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Blog</title>
     </head>
 
     <body>
