Designed the Rebar Info project page

--- a/projects/rebar-info/rebar-info.html
+++ b/projects/rebar-info/rebar-info.html
@@ -1,28 +1,78 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="../../styles.css">
-        <link rel="stylesheet" href="../../font-faces.css">
-        <script src="../../script.js" defer></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rebar Info</title>
-    </head>
+	<head>
+		<link rel="stylesheet" href="../../styles.css" />
+		<link rel="stylesheet" href="../../font-faces.css" />
+		<script src="../../script.js" defer></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Rebar Info</title>
+	</head>
 
-    <body>
-        <div class="navbar">
-            <div id="navbar-left-section">
-                <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                <a href="../../index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
+	<body>
+		<div class="navbar">
+			<div id="navbar-left-section">
+				<span style="font-weight: 700">I'm Emir Cihangir,</span>
+				<a href="../../index.html"
+					><span style="font-weight: 300">a <mark>Software Engineer.</mark></span></a
+				>
+			</div>
+
+			<div id="navbar-right-section">
+				<a href="../../index.html"><span>About Me</span></a>
+				<a href="../../pages/my-projects.html"><span>My Projects</span></a>
+				<a href="../../pages/blog.html"><span>Blog</span></a>
+				<a href="../../pages/contact.html"><span>Contact</span></a>
+			</div>
+		</div>
+
+        <div class="project-header-div">
+            <div class="project-title-container">
+                <div class="project-title">Rebar Info</div>
+                <div>Release Date: May 2024</div>
+                <div style="display: flex; flex-wrap: wrap">
+                    <div class="store-badge-div"><img src="../../assets/images/appstore-badge.svg" /></div>
+                    <div class="store-badge-div"><img src="../../assets/images/mac-appstore-badge.svg" /></div>
+                    <div class="store-badge-div"><img src="../../assets/images/playstore-badge.png" /></div>
+                    <div class="store-badge-div"><img src="../../assets/images/github-mark.svg" /></div>
+                </div>
             </div>
-            
-            <div id="navbar-right-section">
-                <a href="../../index.html"><span>About Me</span></a>
-                <a href="../../pages/my-projects.html"><span>My Projects</span></a>
-                <a href="../../pages/blog.html"><span>Blog</span></a>
-                <a href="../../pages/contact.html"><span>Contact</span></a>
+
+            <div class="project-details">
+                An application developed to easily perform weight and cross-section calculations and diameter conversion calculations in a practical way for diameters
+                from Ø8 to Ø50 for rebar. Thanks to this application, Civil Engineers will be able to easily make these calculations, which they always need, with their
+                smartphones. Depending on the feedback from users, different calculations that may be needed regarding rebar will be added and developed to the
+                application.
             </div>
         </div>
 
-        Rebar Info
-        
-    </body>
+        <div class="project-gallery-div">
+            <img src="./assets/iphone-ss-1.png "/>
+            <img src="./assets/iphone-ss-2.png "/>
+            <img src="./assets/iphone-ss-3.png "/>
+            <img src="./assets/android-ss-1.png"/>
+            <img src="./assets/android-ss-2.png"/>
+            <img src="./assets/android-ss-3.png"/>
+            <img src="./assets/mac-ss-1.png"/>
+            <img src="./assets/mac-ss-2.png"/>
+            <img src="./assets/mac-ss-3.png"/>
+            <img src="./assets/mac-ss-4.png"/>
+            <img src="./assets/mac-ss-5.png"/>
+            <img src="./assets/mac-ss-6.png"/>
+        </div>
+
+        <div class="fullscreen-gallery-div">
+            <div class="fullscreen-image" style="background-image: url('./assets/iphone-ss-1.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/iphone-ss-2.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/iphone-ss-3.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/android-ss-1.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/android-ss-2.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/android-ss-3.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-1.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-2.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-3.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-4.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-5.png');"></div>
+            <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-6.png');"></div>
+        </div>
+
+	</body>
 </html>
