Programmed the ability to view the images in full screen
Also made the links functional.

--- a/projects/rebar-info/rebar-info.html
+++ b/projects/rebar-info/rebar-info.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" href="../../styles.css" />
 		<link rel="stylesheet" href="../../font-faces.css" />
 		<script src="../../script.js" defer></script>
+		<script src="rebar-info.js" defer></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rebar Info</title>
 	</head>
@@ -29,10 +30,10 @@
                 <div class="project-title">Rebar Info</div>
                 <div>Release Date: May 2024</div>
                 <div style="display: flex; flex-wrap: wrap">
-                    <div class="store-badge-div"><img src="../../assets/images/appstore-badge.svg" /></div>
-                    <div class="store-badge-div"><img src="../../assets/images/mac-appstore-badge.svg" /></div>
-                    <div class="store-badge-div"><img src="../../assets/images/playstore-badge.png" /></div>
-                    <div class="store-badge-div"><img src="../../assets/images/github-mark.svg" /></div>
+                    <div class="store-badge-div" data-link="https://apps.apple.com/tr/app/i-nşaat-demiri-hesaplamaları/id6741046554?l=tr"><img src="../../assets/images/appstore-badge.svg" /></div>
+                    <div class="store-badge-div" data-link="https://apps.apple.com/tr/app/i-nşaat-demiri-hesaplamaları/id6741118999?mt=12"><img src="../../assets/images/mac-appstore-badge.svg" /></div>
+                    <div class="store-badge-div" data-link="https://play.google.com/store/apps/details?id=emir.rebarinfo&pcampaignid=web_share"><img src="../../assets/images/playstore-badge.png" /></div>
+                    <div class="store-badge-div" data-link="https://github.com/emircihangir/rebarinfo.git"><img src="../../assets/images/github-mark.svg" /></div>
                 </div>
             </div>
 
@@ -72,6 +73,8 @@
             <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-4.png');"></div>
             <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-5.png');"></div>
             <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-6.png');"></div>
+
+            <div id="close-fullscreen-button"><img src="../../assets/images/close.svg" width="50px"></div>
         </div>
 
 	</body>
