--- a/pages/desktop-apps.html
+++ b/pages/desktop-apps.html
@@ -38,6 +38,11 @@
                         <div class="app-div-icon" style="background-image: url('../projects/batch-renamer/assets/app-icon.png');"></div>
                         Batch Renamer
                     </div>
+
+                    <div class="app-div" data-appname="pdf-manager">
+                        <div class="app-div-icon" style="background-image: url('../projects/pdf-manager/assets/app-icon.png');"></div>
+                        PDF Manager
+                    </div>
                     
                 </div>
             </div>
