--- a/projects/rebar-info/rebar-info.html
+++ b/projects/rebar-info/rebar-info.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" href="../../styles.css" />
 		<link rel="stylesheet" href="../../font-faces.css" />
 		<script src="../../script.js" defer></script>
-		<script src="rebar-info.js" defer></script>
+		<script src="../projects.js" defer></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rebar Info</title>
 	</head>
