Added the project service fee calculator project

--- a/pages/web-apps.html
+++ b/pages/web-apps.html
@@ -33,6 +33,11 @@
                         <div class="app-div-icon" style="background-image: url('../projects/supervising-fee-calculator/assets/app-icon.png');"></div>
                         Supervising Fee Calculator
                     </div>
+
+                    <div class="app-div" data-appname="project-service-fee-calculator">
+                        <div class="app-div-icon" style="background-image: url('../projects/project-service-fee-calculator/assets/app-icon.png');"></div>
+                        Project Service Fee Calculator
+                    </div>
                     
                 </div>
             </div>
