Added the visit website link to project page

--- a/projects/supervising-fee-calculator/supervising-fee-calculator.html
+++ b/projects/supervising-fee-calculator/supervising-fee-calculator.html
@@ -29,6 +29,7 @@
             <div class="project-title-container">
                 <div class="project-title">Supervising Fee Calculator</div>
                 <div>Release Date: February 2025</div>
+                <a href="http://www.serbestcihangir.com/mesleki-denetim-bedeli-hesaplama/" target="_blank" style="text-decoration: underline;">Open the Web App</a>
                 <div style="display: flex; flex-wrap: wrap">
                     <div class="store-badge-div" data-link="https://github.com/emircihangir/EC-Proje-Bedeli-Hesaplama"><img src="../../assets/images/github-mark.svg" /></div>
                 </div>
