--- a/pages/mobile-apps.html
+++ b/pages/mobile-apps.html
@@ -27,7 +27,7 @@
                 <div style="font-weight: 700; font-size: 3rem;margin: 50px 0px 15px 0px;">Mobile Apps</div> <br>
                 <div style="margin-bottom: 15px;">Applications designed for iOS and Android operating systems.</div>
 
-                <div style="display: flex;">
+                <div style="display: flex; justify-content: center;">
 
                     <div class="app-div" data-appname="rebar-info">
                         <div class="app-div-icon" style="background-image: url('../projects/rebar-info/assets/app-icon.png');"></div>
