--- a/pages/web-apps.html
+++ b/pages/web-apps.html
@@ -27,7 +27,7 @@
                 <div style="font-weight: 700; font-size: 3rem;margin: 50px 0px 15px 0px;">Web Apps</div> <br>
                 <div style="margin-bottom: 15px;">Applications designed to be accessible from anywhere in the world.</div>
 
-                <div style="display: flex;">
+                <div style="display: flex; justify-content: center;">
 
                     <div class="app-div" data-appname="supervising-fee-calculator">
                         <div class="app-div-icon" style="background-image: url('../projects/supervising-fee-calculator/assets/app-icon.png');"></div>
