Designed the contact modal

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,7 +18,7 @@
                 <a href="../index.html"><span>About Me</span></a>
                 <a href="./my-projects.html"><span>My Projects</span></a>
                 <a href="./blog.html"><span>Blog</span></a>
-                <a href="./contact.html"><span>Contact</span></a>
+                <a class="contact-link"><span>Contact</span></a>
             </div>
         </div>
 
