--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="./index.html"><span>About Me</span></a>
                     <a href="./pages/my-projects.html"><span>My Projects</span></a>
                     <a href="./pages/blog.html"><span>Blog</span></a>
-                    <a href="./pages/contact.html"><span>Contact</span></a>
+                    <a class="contact-link"><span>Contact</span></a>
                 </div>
             </div>
 
@@ -102,6 +102,23 @@
                     <br>
                     <input type="button" value="Get in Touch">
                 </div>
+            </div>
+        </div>
+
+        <div id="contact-modal">
+            <div style="padding: 50px; background-color: white;border: 1px solid black; position: inherit;">
+                <div id="close-contact-modal-button"></div>
+
+                <p style="font-size: 48px; position: relative; z-index: 99; font-weight: 600;">Contact</p>
+                <div style="width: 300px; height: 70px; background-color: var(--main-color);position: relative; bottom: 40px;"></div>
+                <p>Call: <a href="tel:+905332058243">+90-533-205-8243</a></p>
+                <p>Write: <a href="mailto:m.emircihangir@gmail.com">m.emircihangir@gmail.com</a></p>
+                <div style="display: flex; justify-content: center;">
+                    <div style="background-image: url('./assets/images/github-mark.svg');" class="logo-div" onclick="window.open('https://github.com/emircihangir', '_blank')"></div>
+                    <div style="background-image: url('./assets/images/linkedin-logo.png');" class="logo-div" onclick="window.open('https://www.linkedin.com/in/emir-cihangir-683146313/', '_blank')"></div>
+                </div>
+                
+                
             </div>
         </div>
     </body>
