--- a/projects/supervising-fee-calculator/supervising-fee-calculator.html
+++ b/projects/supervising-fee-calculator/supervising-fee-calculator.html
@@ -21,7 +21,7 @@
 				<a href="../../index.html"><span>About Me</span></a>
 				<a href="../../pages/my-projects.html"><span>My Projects</span></a>
 				<a href="../../pages/blog.html"><span>Blog</span></a>
-				<a href="../../pages/contact.html"><span>Contact</span></a>
+				<a class="contact-link"><span>Contact</span></a>
 			</div>
 		</div>
 
