Added instagram to the contact modal
Also made the contact model hide at first

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 <div style="display: flex; justify-content: center;">
                     <div style="background-image: url('./assets/images/github-mark.svg');" class="logo-div" onclick="window.open('https://github.com/emircihangir', '_blank')"></div>
                     <div style="background-image: url('./assets/images/linkedin-logo.png');" class="logo-div" onclick="window.open('https://www.linkedin.com/in/emir-cihangir-683146313/', '_blank')"></div>
+                    <div style="background-image: url('./assets/images/instagram-logo.svg');" class="logo-div" onclick="window.open('https://www.instagram.com/cihangirmuhammedemir/', '_blank')"></div>
                 </div>
                 
                 
