Switched to absolute path linkings in blog.html

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href="../font-faces.css">
-        <script src="../script.js" defer></script>
+        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="/font-faces.css">
+        <script src="/script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog</title>
     </head>
@@ -11,13 +11,13 @@
         <div class="navbar">
             <div id="navbar-left-section">
                 <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                <a href="../index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
+                <a href="/index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
             </div>
             
             <div id="navbar-right-section">
-                <a href="../index.html"><span>About Me</span></a>
-                <a href="./my-projects.html"><span>My Projects</span></a>
-                <a href="./blog.html"><span>Blog</span></a>
+                <a href="/index.html"><span>About Me</span></a>
+                <a href="/pages/my-projects.html"><span>My Projects</span></a>
+                <a href="/pages/blog.html"><span>Blog</span></a>
                 <a class="contact-link"><span>Contact</span></a>
             </div>
         </div>
