--- a/pages/desktop-apps.html
+++ b/pages/desktop-apps.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href="../font-faces.css">
-        <script src="../script.js" defer></script>
+        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="/font-faces.css">
+        <script src="/script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Desktop Apps</title>
     </head>
@@ -12,13 +12,13 @@
             <div class="navbar">
                 <div id="navbar-left-section">
                     <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                    <a href="../index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
+                    <a href="/index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
                 </div>
                 
                 <div id="navbar-right-section">
-                    <a href="../index.html"><span>About Me</span></a>
-                    <a href="./my-projects.html"><span>My Projects</span></a>
-                    <a href="./blog.html"><span>Blog</span></a>
+                    <a href="/index.html"><span>About Me</span></a>
+                    <a href="/pages/my-projects.html"><span>My Projects</span></a>
+                    <a href="/pages/blog.html"><span>Blog</span></a>
                     <a class="contact-link"><span>Contact</span></a>
                 </div>
             </div>
@@ -30,17 +30,17 @@
                 <div style="display: flex; justify-content: center;">
 
                     <div class="app-div" data-appname="rebar-info">
-                        <div class="app-div-icon" style="background-image: url('../projects/rebar-info/assets/app-icon.png');"></div>
+                        <div class="app-div-icon" style="background-image: url('/projects/rebar-info/assets/app-icon.png');"></div>
                         Rebar Info
                     </div>
 
                     <div class="app-div" data-appname="batch-renamer">
-                        <div class="app-div-icon" style="background-image: url('../projects/batch-renamer/assets/app-icon.png');"></div>
+                        <div class="app-div-icon" style="background-image: url('/projects/batch-renamer/assets/app-icon.png');"></div>
                         Batch Renamer
                     </div>
 
                     <div class="app-div" data-appname="pdf-manager">
-                        <div class="app-div-icon" style="background-image: url('../projects/pdf-manager/assets/app-icon.png');"></div>
+                        <div class="app-div-icon" style="background-image: url('/projects/pdf-manager/assets/app-icon.png');"></div>
                         PDF Manager
                     </div>
                     
