Switched to absolute path linkings in batch-renamer.html

--- a/projects/batch-renamer/batch-renamer.html
+++ b/projects/batch-renamer/batch-renamer.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="../../styles.css" />
-		<link rel="stylesheet" href="../../font-faces.css" />
-		<script src="../../script.js" defer></script>
-		<script src="../projects.js" defer></script>
+		<link rel="stylesheet" href="/styles.css" />
+		<link rel="stylesheet" href="/font-faces.css" />
+		<script src="/script.js" defer></script>
+		<script src="/projects/projects.js" defer></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Batch Renamer</title>
 	</head>
@@ -12,15 +12,15 @@
 		<div class="navbar">
 			<div id="navbar-left-section">
 				<span style="font-weight: 700">I'm Emir Cihangir,</span>
-				<a href="../../index.html"
+				<a href="/index.html"
 					><span style="font-weight: 300">a <mark>Software Engineer.</mark></span></a
 				>
 			</div>
 
 			<div id="navbar-right-section">
-				<a href="../../index.html"><span>About Me</span></a>
-				<a href="../../pages/my-projects.html"><span>My Projects</span></a>
-				<a href="../../pages/blog.html"><span>Blog</span></a>
+				<a href="/index.html"><span>About Me</span></a>
+				<a href="/pages/my-projects.html"><span>My Projects</span></a>
+				<a href="/pages/blog.html"><span>Blog</span></a>
 				<a class="contact-link"><span>Contact</span></a>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
                 <div class="project-title">Batch Renamer</div>
                 <div>Release Date: June 2024</div>
                 <div style="display: flex; flex-wrap: wrap">
-                    <div class="store-badge-div" data-link="https://github.com/emircihangir/batch-renamer"><img src="../../assets/images/github-mark.svg" /></div>
+                    <div class="store-badge-div" data-link="https://github.com/emircihangir/batch-renamer"><img src="/assets/images/github-mark.svg" /></div>
                 </div>
             </div>
 
@@ -50,7 +50,7 @@
             <div class="fullscreen-image" style="background-image: url('./assets/SS-2.png');"></div>
             <div class="fullscreen-image" style="background-image: url('./assets/SS-3.png');"></div>
 
-            <div id="close-fullscreen-button"><img src="../../assets/images/close.svg" width="50px"></div>
+            <div id="close-fullscreen-button"><img src="/assets/images/close.svg" width="50px"></div>
         </div>
 
 	</body>
