--- a/projects/rebar-info/rebar-info.html
+++ b/projects/rebar-info/rebar-info.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="../../styles.css" />
-		<link rel="stylesheet" href="../../font-faces.css" />
-		<script src="../../script.js" defer></script>
-		<script src="../projects.js" defer></script>
+		<link rel="stylesheet" href="/styles.css" />
+		<link rel="stylesheet" href="/font-faces.css" />
+		<script src="/script.js" defer></script>
+		<script src="/projects/projects.js" defer></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rebar Info</title>
 	</head>
@@ -12,15 +12,15 @@
 		<div class="navbar">
 			<div id="navbar-left-section">
 				<span style="font-weight: 700">I'm Emir Cihangir,</span>
-				<a href="../../index.html"
+				<a href="/index.html"
 					><span style="font-weight: 300">a <mark>Software Engineer.</mark></span></a
 				>
 			</div>
 
 			<div id="navbar-right-section">
-				<a href="../../index.html"><span>About Me</span></a>
-				<a href="../../pages/my-projects.html"><span>My Projects</span></a>
-				<a href="../../pages/blog.html"><span>Blog</span></a>
+				<a href="/index.html"><span>About Me</span></a>
+				<a href="/pages/my-projects.html"><span>My Projects</span></a>
+				<a href="/pages/blog.html"><span>Blog</span></a>
 				<a class="contact-link"><span>Contact</span></a>
 			</div>
 		</div>
@@ -30,10 +30,10 @@
                 <div class="project-title">Rebar Info</div>
                 <div>Release Date: May 2024</div>
                 <div style="display: flex; flex-wrap: wrap">
-                    <div class="store-badge-div" data-link="https://apps.apple.com/tr/app/i-nşaat-demiri-hesaplamaları/id6741046554?l=tr"><img src="../../assets/images/appstore-badge.svg" /></div>
-                    <div class="store-badge-div" data-link="https://apps.apple.com/tr/app/i-nşaat-demiri-hesaplamaları/id6741118999?mt=12"><img src="../../assets/images/mac-appstore-badge.svg" /></div>
-                    <div class="store-badge-div" data-link="https://play.google.com/store/apps/details?id=emir.rebarinfo&pcampaignid=web_share"><img src="../../assets/images/playstore-badge.png" /></div>
-                    <div class="store-badge-div" data-link="https://github.com/emircihangir/rebarinfo.git"><img src="../../assets/images/github-mark.svg" /></div>
+                    <div class="store-badge-div" data-link="https://apps.apple.com/tr/app/i-nşaat-demiri-hesaplamaları/id6741046554?l=tr"><img src="/assets/images/appstore-badge.svg" /></div>
+                    <div class="store-badge-div" data-link="https://apps.apple.com/tr/app/i-nşaat-demiri-hesaplamaları/id6741118999?mt=12"><img src="/assets/images/mac-appstore-badge.svg" /></div>
+                    <div class="store-badge-div" data-link="https://play.google.com/store/apps/details?id=emir.rebarinfo&pcampaignid=web_share"><img src="/assets/images/playstore-badge.png" /></div>
+                    <div class="store-badge-div" data-link="https://github.com/emircihangir/rebarinfo.git"><img src="/assets/images/github-mark.svg" /></div>
                 </div>
             </div>
 
@@ -74,7 +74,7 @@
             <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-5.png');"></div>
             <div class="fullscreen-image" style="background-image: url('./assets/mac-ss-6.png');"></div>
 
-            <div id="close-fullscreen-button"><img src="../../assets/images/close.svg" width="50px"></div>
+            <div id="close-fullscreen-button"><img src="/assets/images/close.svg" width="50px"></div>
         </div>
 
 	</body>
