--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href="../font-faces.css">
-        <script src="../script.js" defer></script>
+        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="/font-faces.css">
+        <script src="/components.js"></script>
+        <script src="/script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Projects</title>
     </head>
@@ -12,28 +13,28 @@
             <div class="navbar">
                 <div id="navbar-left-section">
                     <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                    <a href="../index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
+                    <a href="/index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
                 </div>
                 
                 <div id="navbar-right-section">
-                    <a href="../index.html"><span>About Me</span></a>
-                    <a href="./my-projects.html"><span>My Projects</span></a>
-                    <a href="./blog.html"><span>Blog</span></a>
+                    <a href="/index.html"><span>About Me</span></a>
+                    <a href="/pages/my-projects.html"><span>My Projects</span></a>
+                    <a href="/pages/blog.html"><span>Blog</span></a>
                     <a class="contact-link"><span>Contact</span></a>
                 </div>
             </div>
 
             <div id="my-projects-page-main-div">
                 <div class="platform-div" onclick="window.location.href = 'mobile-apps.html';">
-                    <img src="../assets/images/iphone-bezel.png" width="100%">
+                    <img src="/assets/images/iphone-bezel.png" width="100%">
                     <span>Mobile Apps</span>
                 </div>
                 <div class="platform-div" onclick="window.location.href = 'desktop-apps.html';">
-                    <img src="../assets/images/mac-bezel.png" width="100%">
+                    <img src="/assets/images/mac-bezel.png" width="100%">
                     <span>Desktop Apps</span>
                 </div>
                 <div class="platform-div" onclick="window.location.href = 'web-apps.html';">
-                    <img src="../assets/images/web.png" width="100%">
+                    <img src="/assets/images/web.png" width="100%">
                     <span>Web Apps</span>
                 </div>
             </div>
@@ -41,5 +42,7 @@
 
         <div id="left-chevron" onclick="chevronClicked('left')"></div>
         <div id="right-chevron" onclick="chevronClicked('right')"></div>
+
+        <contact-modal></contact-modal>
     </body>
 </html>
