--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="/font-faces.css">
+        <script src="/components.js"></script>
         <script src="/script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blog</title>
@@ -22,6 +23,7 @@
             </div>
         </div>
 
+        <contact-modal></contact-modal>
         
     </body>
 </html>
