--- a/pages/web-apps.html
+++ b/pages/web-apps.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="/font-faces.css">
+        <script src="/components.js"></script>
         <script src="/script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web Apps</title>
@@ -43,5 +44,6 @@
             </div>
         </div>
         
+        <contact-modal></contact-modal>
     </body>
 </html>
