--- a/projects/rebar-info/rebar-info.html
+++ b/projects/rebar-info/rebar-info.html
@@ -2,6 +2,7 @@
 	<head>
 		<link rel="stylesheet" href="/styles.css" />
 		<link rel="stylesheet" href="/font-faces.css" />
+        <script src="/components.js"></script>
 		<script src="/script.js" defer></script>
 		<script src="/projects/projects.js" defer></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -77,5 +78,6 @@
             <div id="close-fullscreen-button"><img src="/assets/images/close.svg" width="50px"></div>
         </div>
 
+        <contact-modal></contact-modal>
 	</body>
 </html>
