--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -10,19 +10,7 @@
 
     <body>
         <div style="display: flex; flex-direction: column;height: 100%;width: 100%;">
-            <div class="navbar">
-                <div id="navbar-left-section">
-                    <span style="font-weight: 700;">I'm Emir Cihangir,</span>
-                    <a href="/index.html"><span style="font-weight: 300;">a <mark>Software Engineer.</mark></span></a>
-                </div>
-                
-                <div id="navbar-right-section">
-                    <a href="/index.html"><span>About Me</span></a>
-                    <a href="/pages/my-projects.html"><span>My Projects</span></a>
-                    <a href="/pages/blog.html"><span>Blog</span></a>
-                    <a class="contact-link"><span>Contact</span></a>
-                </div>
-            </div>
+            <nav-bar></nav-bar>
 
             <div id="my-projects-page-main-div">
                 <div class="platform-div" onclick="window.location.href = 'mobile-apps.html';">
