Created the app-link custom component

--- a/pages/mobile-apps.html
+++ b/pages/mobile-apps.html
@@ -18,10 +18,7 @@
 
                 <div style="display: flex; justify-content: center;">
 
-                    <div class="app-div" data-appname="rebar-info">
-                        <div class="app-div-icon" style="background-image: url('/projects/rebar-info/assets/app-icon.png');"></div>
-                        Rebar Info
-                    </div>
+                    <app-link app-title="Rebar Info" app-name="rebar-info"></app-link>
                     
                 </div>
             </div>
