--- a/pages/web-apps.html
+++ b/pages/web-apps.html
@@ -17,16 +17,9 @@
                 <div style="margin-bottom: 15px;">Applications designed to be accessible from anywhere in the world.</div>
 
                 <div style="display: flex; justify-content: center;">
-
-                    <div class="app-div" data-appname="supervising-fee-calculator">
-                        <div class="app-div-icon" style="background-image: url('/projects/supervising-fee-calculator/assets/app-icon.png');"></div>
-                        Supervising Fee Calculator
-                    </div>
-
-                    <div class="app-div" data-appname="project-service-fee-calculator">
-                        <div class="app-div-icon" style="background-image: url('/projects/project-service-fee-calculator/assets/app-icon.png');"></div>
-                        Project Service Fee Calculator
-                    </div>
+                    
+                    <app-link app-name="supervising-fee-calculator" app-title="Supervising Fee Calculator"></app-link>
+                    <app-link app-name="project-service-fee-calculator" app-title="Project Service Fee Calculator"></app-link>
                     
                 </div>
             </div>
