--- a/pages/desktop-apps.html
+++ b/pages/desktop-apps.html
@@ -18,20 +18,9 @@
 
                 <div style="display: flex; justify-content: center;">
 
-                    <div class="app-div" data-appname="rebar-info">
-                        <div class="app-div-icon" style="background-image: url('/projects/rebar-info/assets/app-icon.png');"></div>
-                        Rebar Info
-                    </div>
-
-                    <div class="app-div" data-appname="batch-renamer">
-                        <div class="app-div-icon" style="background-image: url('/projects/batch-renamer/assets/app-icon.png');"></div>
-                        Batch Renamer
-                    </div>
-
-                    <div class="app-div" data-appname="pdf-manager">
-                        <div class="app-div-icon" style="background-image: url('/projects/pdf-manager/assets/app-icon.png');"></div>
-                        PDF Manager
-                    </div>
+                    <app-link app-name="rebar-info" app-title="Rebar Info"></app-link>
+                    <app-link app-name="batch-renamer" app-title="Batch Renamer"></app-link>
+                    <app-link app-name="pdf-manager" app-title="PDF Manager"></app-link>
                     
                 </div>
             </div>
