Added private notes

--- a/pages/mobile-apps.html
+++ b/pages/mobile-apps.html
@@ -19,6 +19,7 @@
                 <div style="display: flex; justify-content: center;">
 
                     <app-link app-title="Rebar Info" app-name="rebar-info"></app-link>
+                    <app-link app-title="Private Notes" app-name="private-notes"></app-link>
                     
                 </div>
             </div>
