Downscaled the images in my-projects.html

--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -22,7 +22,7 @@
                     <span>Desktop Apps</span>
                 </div>
                 <div class="platform-div" onclick="window.location.href = 'web-apps.html';">
-                    <img src="/assets/images/web.png" width="100%">
+                    <img src="/assets/images/web.svg" width="100%">
                     <span>Web Apps</span>
                 </div>
             </div>
