Defined the icon-type property for the app-divs

--- a/pages/mobile-apps.html
+++ b/pages/mobile-apps.html
@@ -18,8 +18,8 @@
 
                 <div style="display: flex; justify-content: center;">
 
-                    <app-link app-title="Rebar Info" app-name="rebar-info"></app-link>
-                    <app-link app-title="Private Notes" app-name="private-notes"></app-link>
+                    <app-link app-title="Rebar Info" app-name="rebar-info" icon-type="svg"></app-link>
+                    <app-link app-title="Private Notes" app-name="private-notes" icon-type="svg"></app-link>
                     
                 </div>
             </div>
