Defined the scaffold-icon and icon-type properties of app-link components

--- a/pages/desktop-apps.html
+++ b/pages/desktop-apps.html
@@ -18,9 +18,9 @@
 
                 <div style="display: flex; justify-content: center;">
 
-                    <app-link app-name="rebar-info" app-title="Rebar Info"></app-link>
-                    <app-link app-name="batch-renamer" app-title="Batch Renamer"></app-link>
-                    <app-link app-name="pdf-manager" app-title="PDF Manager"></app-link>
+                    <app-link app-name="rebar-info" app-title="Rebar Info" icon-type="svg"></app-link>
+                    <app-link app-name="batch-renamer" app-title="Batch Renamer" scaffold-icon="true"></app-link>
+                    <app-link app-name="pdf-manager" app-title="PDF Manager" scaffold-icon="true"></app-link>
                     
                 </div>
             </div>
