--- a/pages/web-apps.html
+++ b/pages/web-apps.html
@@ -18,8 +18,8 @@
 
                 <div style="display: flex; justify-content: center;">
                     
-                    <app-link app-name="supervising-fee-calculator" app-title="Supervising Fee Calculator"></app-link>
-                    <app-link app-name="project-service-fee-calculator" app-title="Project Service Fee Calculator"></app-link>
+                    <app-link app-name="supervising-fee-calculator" app-title="Supervising Fee Calculator" scaffold-icon="true"></app-link>
+                    <app-link app-name="project-service-fee-calculator" app-title="Project Service Fee Calculator" scaffold-icon="true"></app-link>
                     
                 </div>
             </div>
