Made the "get in touch" button functional

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                     clients genuinely satisfied with both the process and the outcome.
                     <br>
                     <br>
-                    <input type="button" value="Get in Touch">
+
+                    <input type="button" value="Get in Touch" onclick="openContactModal()">
                 </div>
             </div>
         </div>
