Made the app-div containers responsive

--- a/pages/desktop-apps.html
+++ b/pages/desktop-apps.html
@@ -16,7 +16,7 @@
                 <div style="font-weight: 500; font-size: 3rem;margin: 50px 0px 15px 0px;">Desktop Apps</div> <br>
                 <div style="margin-bottom: 15px;">Applications designed for Windows, MacOS and Linux operating systems.</div>
 
-                <div style="display: flex; justify-content: center;">
+                <div style="display: flex; justify-content: center; flex-wrap: wrap;">
 
                     <app-link app-name="rebar-info" app-title="Rebar Info" icon-type="svg"></app-link>
                     <app-link app-name="batch-renamer" app-title="Batch Renamer" scaffold-icon="true"></app-link>
