--- a/pages/web-apps.html
+++ b/pages/web-apps.html
@@ -16,7 +16,7 @@
                 <div style="font-weight: 500; font-size: 3rem;margin: 50px 0px 15px 0px;">Web Apps</div> <br>
                 <div style="margin-bottom: 15px;">Applications designed to be accessible from anywhere in the world.</div>
 
-                <div style="display: flex; justify-content: center;">
+                <div style="display: flex; justify-content: center; flex-wrap: wrap;">
                     
                     <app-link app-name="supervising-fee-calculator" app-title="Supervising Fee Calculator" scaffold-icon="true"></app-link>
                     <app-link app-name="project-service-fee-calculator" app-title="Project Service Fee Calculator" scaffold-icon="true"></app-link>
