Added AI models platform-div

--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -25,6 +25,10 @@
                     <img src="/assets/images/web.svg">
                     <span>Web Apps</span>
                 </div>
+                <div class="platform-div" onclick="window.location.href = 'ai-projects.html';">
+                    <img src="/assets/images/ai.svg">
+                    <span>AI Models</span>
+                </div>
             </div>
         </div>
 
