Add python projects in my projects page

--- a/pages/my-projects.html
+++ b/pages/my-projects.html
@@ -13,6 +13,10 @@
             <nav-bar></nav-bar>
 
             <div id="my-projects-page-main-div">
+                <div class="platform-div" onclick="window.location.href = 'python-projects.html';">
+                    <img src="/assets/images/python.svg">
+                    <span>Python Projects</span>
+                </div>
                 <div class="platform-div" onclick="window.location.href = 'mobile-apps.html';">
                     <img src="/assets/images/mobile.svg">
                     <span>Mobile Apps</span>
@@ -25,10 +29,6 @@
                     <img src="/assets/images/web.svg">
                     <span>Web Apps</span>
                 </div>
-                <!-- <div class="platform-div" onclick="window.location.href = 'ai-projects.html';">
-                    <img src="/assets/images/ai.svg">
-                    <span>AI Models</span>
-                </div> -->
             </div>
         </div>
 
